// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: BusinessImageUpload should render 1`] = `
<div>
  <div
    className="row col-lg-12"
  >
    <div
      className="form-group col-lg-6"
    >
      <label
        className="btn btn-default"
        id="upload-form-label"
      >
        <div>
          <img
            alt="Avatar"
            className="hide"
            height="100px"
            id="show-image"
            src=""
            width="130px"
          />
          <div
            id="dropzone"
          >
            <i
              aria-hidden="true"
              className="fa fa-picture-o fa-3x"
            />
            <p>
              choose image
            </p>
          </div>
        </div>
        <input
          hidden={true}
          name="image"
          onChange={[MockFunction]}
          type="file"
        />
      </label>
    </div>
    <div
      className="col-lg-4"
    >
      <h4
        className="hide text-center"
        id="upload-info"
      >
        You have to click the upload button to finish
      </h4>
    </div>
  </div>
</div>
`;

exports[`Component: BusinessImageUpload should render upload progress 1`] = `
<div>
  <div
    className="row col-lg-12"
  >
    <div
      className="form-group col-lg-6"
    >
      <label
        className="btn btn-default"
        id="upload-form-label"
      >
        <div
          className="progress form-progress-bar"
          id="progress"
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="100"
            className="progress-bar progress-bar-striped progress-bar-animated"
            role="progressbar"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div>
          <img
            alt="Avatar"
            className="hide"
            height="100px"
            id="show-image"
            src=""
            width="130px"
          />
          <div
            id="dropzone"
          >
            <i
              aria-hidden="true"
              className="fa fa-picture-o fa-3x"
            />
            <p>
              choose image
            </p>
          </div>
        </div>
        <input
          hidden={true}
          name="image"
          onChange={[MockFunction]}
          type="file"
        />
      </label>
    </div>
    <div
      className="col-lg-4"
    >
      <h4
        className="hide text-center"
        id="upload-info"
      >
        You have to click the upload button to finish
      </h4>
    </div>
  </div>
</div>
`;
